# easyslice-clone

./: .gitignore  README.md  TRAINING copy.PY  TRAINING.PY  config.json.sample  final copy.ipynb  final.ipynb  mvp+multiple_segments.ipynb  mvp.ipynb  pyproject.toml  requirements.txt  v2.ipynb
in/training_data/: input.txt  input2.txt  output.json  output2.json
src/easyslice/: __init__.py  __main__.py  cli.py  config.py
src/easyslice/ai/: base.py  factory.py
src/easyslice/ai/providers/: __init__.py  gemini.py  openai.py
src/easyslice/domain/: __init__.py  exceptions.py  models.py
src/easyslice/pipeline/: __init__.py  captions.py  clip_matching.py  prompts.py  story_segmentation.py  transcription.py  utils.py  video_editing.py  youtube.py
src/easyslice/ui/: __init__.py  progress.py
tests/: test_ai_schema.py
